ingresses/ingress-host-example.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
